# adk-lab-app

./: .agents-cli-spec.md  .gitignore  README.md  run-routers.sh
0-TODO/: gement-specific-issues.md  implement-skills.md  implementation_plan.md  optimization_plan.md  router_ops_agent_rubric_review.md  rubrics.md  session_summary_2026_07_15.md  session_summary_2026_07_16.md  session_summary_2026_07_17.md
my-agent/: README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
router-agent-DEPRECATED/: DESIGN_SPEC.md  Makefile  README.md  __init__.py  agent.py  agents-cli-manifest.yaml  config.py  deploy.sh  deployment_metadata.json  pyproject.toml  tools.py
router-agent-DEPRECATED/router_agent.egg-info/: PKG-INFO
router-agent-DEPRECATED/tests/: test_agent.py
router-agent-v2/: README.md  agents-cli-manifest.yaml  deployment_metadata.json  run_a2a.py  (+2 more)
router-dashboard/: .env.example  .gitignore  Dockerfile  README.md  app.py  deploy.sh  pyproject.toml  requirements.txt  routers.json  run.sh  secret_manager.py
router-dashboard/classes/: __init__.py  router_node.py  router_registry.py
router-dashboard/docs/: README.md  cisco_asr_9000_manual.md  cisco_catalyst_8500_manual.md  cisco_nexus_9300_ex_manual.md
router-dashboard/helpers/: __init__.py  auth.py  cloud_run.py  logger.py  secret_manager.py
router-dashboard/static/css/: styles.css
router-dashboard/static/js/: app.js
router-dashboard/templates/: index.html
router-emulator/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  build_image.sh  deploy.sh  pyproject.toml  requirements.txt  run.sh  secret_manager.py  snmp_agent.py
router-emulator/a2ui_templates/: card.json
router-emulator/classes/: __init__.py  router_state.py  snmp_agent.py
router-emulator/helpers/: __init__.py  logger.py  secret_manager.py
router-emulator/router_emulator.egg-info/: PKG-INFO
router-emulator/static/css/: styles.css
router-emulator/static/js/: app.js
router-emulator/templates/: compact.html  index.html
router-mcp-server/: .dockerignore  Dockerfile  README.md  deploy.sh  pyproject.toml  server.py  test_mcp.py
router-mcp-server/classes/: __init__.py  a2ui_builder.py
router-mcp-server/helpers/: __init__.py  auth.py  fleet.py  logger.py  tools.py  types.py
(+156 files in other folders)
