[project]
name = "router-agent"
version = "0.1.0"
description = "Router Fleet Operations ADK Diagnostic Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.0.0,<3.0.0",
    "fastmcp>=0.1.0",
    "google-genai>=0.1.0",
    "google-cloud-discoveryengine>=0.11.0",
    "google-cloud-aiplatform>=1.129.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
