[project]
name = "router-dashboard"
version = "0.1.0"
description = "Router Fleet Operations Control Dashboard & Telemetry Aggregator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "google-cloud-secret-manager>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
