[project]
name = "router-mcp-server"
version = "0.1.0"
description = "Router Fleet Operations Model Context Protocol (MCP) Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.31.0",
    "google-auth>=2.29.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "google-cloud-secret-manager>=2.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
